<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_nav"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.arEgTA.futsureacademy.ui.login.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment"
            app:enterAnim="@anim/nav_default_pop_enter_anim" />
        <action
            android:id="@+id/action_loginFragment_to_forgotPasswordFragment"
            app:destination="@id/forgotPasswordFragment" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.arEgTA.futsureacademy.ui.login.register.RegisterFragment"
        android:label="@string/create_account"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/forgotPasswordFragment"
        android:name="com.arEgTA.futsureacademy.ui.login.forgotPassword.ForgotPasswordFragment"
        android:label="@string/forget_password"
        tools:layout="@layout/fragment_forgot_password" >
        <action
            android:id="@+id/action_forgotPasswordFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
</navigation>