<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:layoutDirection="rtl"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvNameUpdateProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:fontFamily="@font/fontone"
        android:textSize="25sp"
        android:text="الاسم" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fontone"
        android:textSize="25sp"
        android:text="@string/leader" />

    <EditText
        android:id="@+id/edLeaderUpdateProfile"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:background="@drawable/bg_item"
        />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/fontone"
        android:textSize="25sp"
        android:layout_height="wrap_content"
        android:text="@string/group" />

    <EditText
        android:id="@+id/edGroupUpdateProfile"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:background="@drawable/bg_item" />

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/button"
        android:fontFamily="@font/fontone"
        android:textSize="25sp"
        android:layout_width="match_parent"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_height="wrap_content"
        android:text="@string/done" />
</LinearLayout>